# pytorch-learning

./: .gitignore  install.sh  pyproject.toml  tensor_tutorial.ipynb
pytorch-tutorials/: buildmodel_tutorial.ipynb  data_tutorial.ipynb
tinytorch/: .gitignore
tinytorch/modules/01_tensor/: tensor.ipynb
tinytorch/modules/02_activations/: activations.ipynb
tinytorch/modules/03_layers/: layers.ipynb
tinytorch/modules/04_losses/: losses.ipynb
tinytorch/src/03_layers/: 03_layers.py
tinytorch/src/04_losses/: 04_losses.py
tinytorch/tinytorch/: __init__.py
uva_dl_notebooks/04_optim_initialization/: pyproject.toml
uva_dl_notebooks/nn_module/: nn_full_example.py  pyproject.toml
